--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"esbuild": "^0.18.11",
 		"react": "18.2.0",
 		"react-native": "0.72.1",
-		"react-native-esbuild": "^0.5.0"
+		"react-native-esbuild": "^0.5.0",
+		"react-native-webview": "^13.2.2"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.0",
