--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-cookies/cookies": "^6.2.1",
     "esbuild": "^0.18.11",
     "react": "18.2.0",
     "react-native": "0.72.1",
