--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "18.2.0",
     "react-native": "0.72.1",
     "react-native-esbuild": "^0.6.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-webview": "^13.2.2"
   },
   "devDependencies": {
